--- a/.github/workflows/ghcr.yaml
+++ b/.github/workflows/ghcr.yaml
@@ -5,6 +5,8 @@ on:
   push:
     branches: [main]
     # or tag pushes if you prefer: tags: ['v*']
+  pull_request:
+    branches: [main]
 
 jobs:
   build-and-push-archs:
